--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,10 +31,11 @@ tree-sitter-yaml = "0.7"
 tree-sitter-html = "0.23"
 tree-sitter-css = "0.25"
 # 模型嵌入支持（默认启用 CodeBERT + Candle）
-# 使用 candle 0.4 版本，全部设为可选依赖
-candle-core = { version = "0.8.2", optional = true }
-candle-nn = { version = "0.8.2", optional = true }
-candle-transformers = { version = "0.8.2", features = ["default"], optional = true }
+# 使用 candle 0.8 版本，全部设为可选依赖
+# 开启 CUDA 支持，让模型默认可以使用 GPU（如果环境支持）
+candle-core = { version = "0.8.2", features = ["cuda"], optional = true }
+candle-nn = { version = "0.8.2", features = ["cuda"], optional = true }
+candle-transformers = { version = "0.8.2", features = ["default", "cuda"], optional = true }
 tokenizers = "0.19"
 shellexpand = "3.1"
 qdrant-client = "1.16.0"
